[metadata]
name = clui_lib
version = 0.1.1
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Command Line User Interface Tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/clui_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    clui_lib =
packages = clui_lib, clui_lib.Tests, clui_lib.cli_ui
install_requires =
    introspection_lib >= 0.3

[options.package_data]
* = dependencies.json